--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@types/node": "18.15.0",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-highlight": "^0.12.5",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "openai": "^3.2.1",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-highlight": "^0.15.0",
+    "typescript": "4.9.5",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "sass": "^1.58.3"
