--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-highlight": "^0.12.5",
+    "@xstate/react": "^3.2.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
@@ -23,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-highlight": "^0.15.0",
     "typescript": "4.9.5",
+    "xstate": "^4.37.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
