--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,6 @@
     "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "@types/react-highlight": "^0.12.5",
     "@xstate/react": "^3.2.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.4",
@@ -22,10 +21,8 @@
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-highlight": "^0.15.0",
     "typescript": "4.9.5",
-    "xstate": "^4.37.0",
-    "zod": "^3.21.4"
+    "xstate": "^4.37.0"
   },
   "devDependencies": {
     "sass": "^1.58.3"
